--- a/module3/styles.css
+++ b/module3/styles.css
@@ -1,27 +1,26 @@
-
-
 p {
   font-family: Georgia, "Times New Roman", Times, serif;
   font size: 1.2em;
-  text-align: justify;
+  text-align: center;
   margin: 0.5em 2em 0.5em 2em;
   /*margin-bottom: 1em; or top, right, & left */
-  border: 2px solid blue;
+  /*border: 2px solid blue; */
   padding: .5em;
 }
 
 p.two {
   font-family: Georgia, "Times New Roman", Times, serif;
   font size: 1.2em;
-  text-align: justify;
+  text-align: center;
   margin: 0.5em;
   border: 2px solid black;
   padding: .5em;
 }
 
 p.three {
-  font-size: 1.4em;
-  border: 1.5px solid red;
+  font-size: 1.0em;
+  /* border: 1.5px solid red; */
+  text-align: center;
 }
 
 h1 {
@@ -31,6 +30,7 @@ h1 {
 }
 
 h2 {
+  text-align: center;
   font-family: "Trebuchet MS", Helvetica, sans-serif;
   font-size: 1.5em;
 }
@@ -53,7 +53,17 @@ body {
 }
 
 img {
+  align: center;
   display: block;
+  margin: 1em;
+}
+
+
+div {
+  border: 1.5px solid red;
+  margin: 10px;
+  padding: 1em;
+  display: none;
 }
 
 th, td {
